add recipes folder and html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Odin Recipes</title>
     <body>
         <h1>Odin Recipes</h1>
+        <p><a href="recipes/pineapplechicken.html">Pineapple Chicken</a></p>
     </body>
 
 </html>
