Add description and ingredients

--- a/recipes/pineapplechicken.html
+++ b/recipes/pineapplechicken.html
@@ -6,8 +6,22 @@
 
     <body>
         <h1>Pineapple Chicken</h1>
-        <img src="../images/pineapplechicken.png">
-        <h2>Description</h2>
-        <p>This recipe tastes best with a Hawaiian style BBQ sauce, but if one isn't available, just use your own favorite. Every time I fix this, everyone LOVES it! There are usually no leftovers.</p>
+            <img src="../images/pineapplechicken.png">
+                <h2>Description</h2>
+                <p>This recipe tastes best with a Hawaiian style BBQ sauce, but if one isn't available, just use your own favorite. Every time I fix this, everyone LOVES it! There are usually no leftovers.</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>6 skinless, boneless chicken breast halves</li>
+                <li>1 green bell pepper, sliced</li>
+                <li>4 medium red potatoes, sliced </li>
+                <li>1 (20 ounce) can sliced juice-packed pineapple, drained, juice reserved</li>
+                <li>1 (18 ounce) bottle barbeque sauce </li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Preheat oven to 450 degrees F (230 degrees C). Lightly grease a medium baking dish.</li>
+                <li>Place the chicken in the baking dish. Arrange pepper, potatoes, and pineapple around chicken. Pour the reserved pineapple juice over all, and top with barbeque sauce.</li>
+                <li>Bake 1 hour in the preheated oven, or until chicken juices run clear and potatoes are tender.</li>
+            </ol>
     </body>
 </html>
