add new recipe and image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <title>Odin Recipes</title>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/pineapplechicken.html">Pineapple Chicken</a></p>
-    </body>
+        <ul>
+            <li><a href="recipes/pineapplechicken.html">Pineapple Chicken</a></li>
+            <li><a href="../odin-recipes/recipes/frenchtoast.html">French Toast</a></li>
+            <li></li>
+        </ul>
 
 </html>
