--- a/recipes/pineapplechicken.html
+++ b/recipes/pineapplechicken.html
@@ -6,7 +6,7 @@
 
     <body>
         <h1>Pineapple Chicken</h1>
-            <img src="../images/pineapplechicken.png">
+            <img src="../images/pineapplechicken.png" alt="Photo of Pineapple Chicken">
                 <h2>Description</h2>
                 <p>This recipe tastes best with a Hawaiian style BBQ sauce, but if one isn't available, just use your own favorite. Every time I fix this, everyone LOVES it! There are usually no leftovers.</p>
         <h2>Ingredients</h2>
