--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <title>Odin Recipes</title>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="../odin-recipes/images/food.gif">
         <ul>
             <li><a href="recipes/pineapplechicken.html">Pineapple Chicken</a></li>
             <li><a href="../odin-recipes/recipes/frenchtoast.html">French Toast</a></li>
-            <li></li>
+            <li><a href="./recipes/chickenadobo.html">Chicken Adobo</a></li>
         </ul>
 
 </html>
