--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -6,11 +6,28 @@
     </head>
     <body>
         <h1>French Toast</h1>
-        <img src="../images/frenchtoast.png" alt="Photo of French Toast with Blueberry and Strawberry">
+            <img src="../images/frenchtoast.png" alt="Photo of French Toast with Blueberry and Strawberry">
 
         <h2>Description</h2>
-        <p>If you're looking for the best French toast recipe on the internet, you've come to the right place. This tender, fluffy, and indulgent recipe comes together quickly and easily with just five ingredients you already have on hand.</p>
-        <p>How do you know it's good? Because this deliciously easy recipe has earned nearly 2,000 rave reviews from the Allrecipes community. Happy home cooks call it a "definite keeper" and "a Sunday morning favorite" (among many other ringing endorsements).</p>
+            <p>If you're looking for the best French toast recipe on the internet, you've come to the right place. This tender, fluffy, and indulgent recipe comes together quickly and easily with just five ingredients you already have on hand.</p>
+            <p>How do you know it's good? Because this deliciously easy recipe has earned nearly 2,000 rave reviews from the Allrecipes community. Happy home cooks call it a "definite keeper" and "a Sunday morning favorite" (among many other ringing endorsements).</p>
         
+        <h2>Ingredients</h2>
+            <ul>
+                <li>⅔ cup milk</li>
+                <li>2 large eggs</li>
+                <li>1 teaspoon vanilla extract (Optional)</li>
+                <li>¼ teaspoon ground cinnamon (Optional)</li>
+                <li>salt to taste</li>
+                <li>6 thick slices bread</li>
+                <li>1 tablespoon unsalted butter, or more as needed</li>
+            </ul>   
+        <h2>Steps</h2>
+            <ol>
+                <li>Whisk milk, eggs, vanilla, cinnamon, and salt together in a shallow bowl.</li>
+                <li>Lightly butter a griddle and heat over medium-high heat.</li>
+                <li>Dunk bread in the egg mixture, soaking both sides. Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side. Serve hot.</li>
+            </ol>     
+
     </body>
 </html>
