Add css and background

--- a/recipes/chickenadobo.html
+++ b/recipes/chickenadobo.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken Adobo</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Chicken Adobo</h1>
+        <h1 class="one">Chicken Adobo</h1>
             <img src="../images/adobo.png" alt="Photo of Chicken Adobo">
 
             <h2>Description</h2>
