--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>French Toast</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>French Toast</h1>
+        <h1 class="one">French Toast</h1>
             <img src="../images/frenchtoast.png" alt="Photo of French Toast with Blueberry and Strawberry">
 
         <h2>Description</h2>
