--- a/recipes/pineapplechicken.html
+++ b/recipes/pineapplechicken.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Pineapple Chicken</h1>
+        <h1 class="one">Pineapple Chicken</h1>
             <img src="../images/pineapplechicken.png" alt="Photo of Pineapple Chicken">
                 <h2>Description</h2>
                 <p>This recipe tastes best with a Hawaiian style BBQ sauce, but if one isn't available, just use your own favorite. Every time I fix this, everyone LOVES it! There are usually no leftovers.</p>
