--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <head></head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="one">Odin Recipes</h1>
         <img src="../odin-recipes/images/food.gif">
         <ul>
             <li><a href="recipes/pineapplechicken.html">Pineapple Chicken</a></li>
