align img and home <ul> center

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>Odin Recipes</title>
         <link rel="stylesheet" href="style.css">
     <body>
-        <h1 class="one">Odin Recipes</h1>
-        <img src="../odin-recipes/images/food.gif">
-        <ul>
+        <h1 class="one three">Odin Recipes</h1>
+        <img src="../odin-recipes/images/food.gif" alt="gif of a cartoon loving food than people" class="two">
+        <ul class="four">
             <li><a href="recipes/pineapplechicken.html">Pineapple Chicken</a></li>
             <li><a href="../odin-recipes/recipes/frenchtoast.html">French Toast</a></li>
             <li><a href="./recipes/chickenadobo.html">Chicken Adobo</a></li>
