--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1 class="one">French Toast</h1>
-            <img src="../images/frenchtoast.png" alt="Photo of French Toast with Blueberry and Strawberry">
+        <h1 class="one three">French Toast</h1>
+            <img src="../images/frenchtoast.png" alt="Photo of French Toast with Blueberry and Strawberry" class="two">
 
         <h2>Description</h2>
             <p>If you're looking for the best French toast recipe on the internet, you've come to the right place. This tender, fluffy, and indulgent recipe comes together quickly and easily with just five ingredients you already have on hand.</p>
