--- a/recipes/chickenadobo.html
+++ b/recipes/chickenadobo.html
@@ -7,8 +7,8 @@
     </head>
 
     <body>
-        <h1 class="one">Chicken Adobo</h1>
-            <img src="../images/adobo.png" alt="Photo of Chicken Adobo">
+        <h1 class="one three">Chicken Adobo</h1>
+            <img src="../images/adobo.png" alt="Photo of Chicken Adobo" class="two">
 
             <h2>Description</h2>
             <p>This classic adobo recipe is simple to make and famous with all who have tasted it. It has been modified to be a bit more saucy than traditional adobo, it is delicious served over rice.</p>
